# cheshire-cat-ai-tools

./: .env  .gitignore  README.md  cat_chat.py  cat_ws_client.py  pixi.toml  requirements.txt
.devcontainer/: devcontainer.json
case study/: features_by_load_cells.csv  prediction_models.csv
cat_cli/: README.md  cat_cli.py
cat_tools/: _modidx.py  client.py  eval.py  rerun_eval.py  setup_declarative_memory.py
docker-cat/: .cat  .gitignore  .mariadb  .qdrant  Dockerfile  README.md  compose.yml  dev-Dockerfile  install_pip_editable_deps.sh
drymulator/: Dockerfile  generate-client-config.yaml  generate-client.py  openapi.json  pyproject.toml
drymulator/drymulator-client/: README.md  setup.py
drymulator/drymulator-client/drymulator_client/api/default/: config_command_config_post.py  current_state_state_current_get.py  state_time_state_time_get.py
drymulator/drymulator-client/drymulator_client/models/: config_create.py  state_public.py
drymulator/fast-api-client/fast_api_client/api/default/: get_current_state_state_current_get.py  get_state_state_time_get.py  start_command_start_post.py
drymulator/fast-api-client/fast_api_client/models/: __init__.py  config_create.py
drymulator/src/drymulator/: server.py  test_server.py
drymulator/src/drymulator/server/: main.py  test_data.csv
eval/: declarative_memory.csv  deploy_plugin.py  eval_logger.py  setup_db.ipynb  setup_declarative_memory.py  super_cat_client.py  test_eval_logger.py  test_plugin.py  weave-eval.py
evaluation/: .env  LICENSE  pixi.toml  settings.ini
nbs/: index.ipynb  rerun-evaluation.ipynb  super_client.ipynb  (+1 more)
(+36 files in other folders)
