[project]
authors = [{ name = "Simone Massaro", email = "simone.massaro@mone27.net" }]
dependencies = ["fastapi", "sqlmodel", "pydantic-settings"]
name = "drymulator"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
drymulator = { path = ".", editable = true }

[tool.pixi.tasks]
server = "uvicorn drymulator.server:app --reload"
generate-client = "python generate-client.py"
test = "pytest src/drymulator"

[tool.pixi.dependencies]
fastapi = ">=0.115.11,<0.116"
sqlmodel = ">=0.0.23,<0.0.24"
ipykernel = ">=6.29.5,<7"
openapi-python-client = ">=0.24.0,<0.25"
pydantic-settings = ">=2.8.1,<3"
pytest = ">=8.3.5,<9"
